@@ -1,3 +1,7 @@
+2015-11-11  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/Particle: Added.
+
 2015-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* lib/opencl_gl_ext.rb: Added.
